--- a/nexus/package.json
+++ b/nexus/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.14",
+    "quill": "^2.0.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.3.0",
+    "toastify": "^2.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
